--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,10 +1,11 @@
 footer{
-	background-color: #00FF00;
-	height: 60px;
-	width: 100%;
-	position: absolute;
-	bottom: 0;
-	display: grid;
-	place-content: center;
-	border-top: 1px #CCCCCC;
+            color: black;
+            height: 60px;
+            width: 100%;
+            border-top: 1px solid #CCCCCC;
+            display: flex;
+            justify-content: center;
+            position: absolute;
+            align-items: center;
+            bottom: 0;
 }
