--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -6,3 +6,9 @@ body{
     font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
     box-sizing: border-box;
 }
+.container{
+    max-width: 1000px;
+    margin: 30px auto;
+    position: relative;
+    
+}
